# Ebi_BPMN

./: Cargo.toml  README.md
src/: business_process_model_and_notation.rs  conversion.rs  creator.rs  element.rs  exporter.rs  if_not.rs  importer.rs  lib.rs  marking.rs  message_flow.rs  objects_elementable.rs  objects_objectable.rs  objects_searchable.rs  objects_startable.rs  objects_transitionable.rs  objects_writable.rs  partially_ordered_run.rs  semantics.rs  sequence_flow.rs  stochastic_business_process_model_and_notation.rs  structure_checker.rs
src/elements/: collapsed_pool.rs  collapsed_sub_process.rs  end_event.rs  event_based_gateway.rs  exclusive_gateway.rs  expanded_sub_process.rs  inclusive_gateway.rs  intermediate_catch_event.rs  intermediate_throw_event.rs  manual_task.rs  message_end_event.rs  message_intermediate_catch_event.rs  message_intermediate_throw_event.rs  message_start_event.rs  parallel_gateway.rs  participant.rs  process.rs  receive_task.rs  start_event.rs  task.rs  timer_intermediate_catch_event.rs  timer_start_event.rs  user_task.rs
src/parser/: parser.rs  parser_state.rs  parser_traits.rs  tag_collaboration.rs  tag_definitions.rs  tag_end_event.rs  tag_event_based_gateway.rs  tag_exclusive_gateway.rs  tag_inclusive_gateway.rs  tag_intermediate_catch_event.rs  tag_intermediate_throw_event.rs  tag_manual_task.rs  tag_message_event_definition.rs  tag_message_flow.rs  tag_process.rs  (+11 more)
testfiles/: Dispatch-of-goods-uni.sbpmn  admission.bpmn  and-a-b-xor-c-or.sbpmn  eventbasedgateway.bpmn  model-lanes.bpmn  model-zeroweight.sbpmn  or-loop.bpmn
(+32 files in other folders)
